# gsim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Shader.h
res/: basic.frag  basic.vert
src/: Shader.cc  main.cc  main.cpp
